internal/translator/testdata/health-checks-multiple/output.yaml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: health-check
  namespace: default
spec:
  routes:
  - conditions:
    - prefix: /
    healthCheckPolicy:
      healthyThresholdCount: 5
      intervalSeconds: 0
      path: /healthy
      timeoutSeconds: 2
      unhealthyThresholdCount: 3
    services:
    - name: s1-health
      port: 80
    - name: s2-health
      port: 80
  virtualhost:
    fqdn: health.bar.com
status: {}
