internal/translator/testdata/health-checks-multiple/errors.txt
A healthcheck on service s2-health could not be applied, HTTPProxy only supports a single healthcheck across all services. A different healthcheck from service s1-health is already applied.
